<resources>
    <string name="app_name">CyclingMaster</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_record">Record Ride</string>

    <!-- LEADERBOARD -->
    <string-array name="rank">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <!-- Names -->
    <string-array name="Member_names">
        <item>John</item>
        <item>Alex</item>
        <item>Pavan</item>
        <item>Maddy</item>
        <item>Robbin</item>
        <item>Nick</item>
    </string-array>

    <!-- Pictures -->
    <array name="profile_pics">
        <item>@drawable/hill</item>
        <item>@drawable/pp</item>
        <item>@drawable/pp2</item>
        <item>@drawable/pp3</item>
        <item>@drawable/pp4</item>
        <item>@drawable/pp5</item>
    </array>

    <!-- Total ride perKM  -->
    <string-array name="totalride">
        <item>Legend | Level 93</item>
        <item>Master | Level 70</item>
        <item>Expert | Level 62</item>
        <item>Veteran | Level 56</item>
        <item>Semi-Pro | Level 33</item>
        <item>Semi-Pro | Level 29</item>
    </string-array>

    <!-- Badge  -->
    <array name="badge">
        <item>@drawable/badge</item>
        <item>@drawable/badge</item>
        <item>@drawable/badge</item>
        <item>@drawable/badge</item>
        <item>@drawable/badge</item>
        <item>@drawable/badge</item>
    </array>

    <!-- XP -->
    <string-array name="xp">
        <item>4500</item>
        <item>3800</item>
        <item>3000</item>
        <item>2500</item>
        <item>1700</item>
        <item>1300</item>
    </string-array>

</resources>
