<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="innoworld.cyclingmaster.RegisterActivity">

    <!-- Register progress -->
    <ProgressBar android:id="@+id/register_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/register_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/register_form_layout" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:weightSum="1">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtUsername" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_username"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_register_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtfirstname" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_firstname"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_register_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtlastname" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_lastname"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_register_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtemail" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_register_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtPassword" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_register_short"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/doregister_button" style="?android:textAppearanceSmall"
                android:layout_width="147dp" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="Register"
                android:textStyle="bold"
                android:singleLine="false"
                android:background="#3F51B5"
                android:textColor="#fffeee"
                android:onClick="doRegister"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account! Sign In"
                android:id="@+id/tv_signin"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="20dp"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
